<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/cardview_default_elevation"
        app:cardCornerRadius="@dimen/cardview_default_radius">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/empName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="10dp"
                android:text="@string/employee"
                android:textSize="20sp"
                android:textColor="#000"
                android:textAppearance="?android:textAppearanceMedium"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/address"
                android:layout_below="@id/empName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="10dp"
                android:text="@string/address"
                android:textSize="18sp"
                android:textColor="#4C4C4C"
                android:textAppearance="?android:textAppearanceMedium"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/address"
                android:layout_margin="5dp"
                android:layout_marginStart="10dp"
                android:text="@string/num"
                android:textSize="18sp"
                android:textColor="#4C4C4C"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="10dp"
                android:text="@string/aaa"
                android:textSize="20sp"
                android:textAppearance="?android:textAppearanceLarge" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>